Remove RetzExecutor to make it much simpler
Original purpose of RetzExecutor was to control CPU affinity for
AsakusaFW on M3BP, manage files in persistent volumes in our way. But
CPU affinity control is an early optimization and basically it must
cooperate with Mesos itself. Also, managing persistent volumes for
caching large files is not at good tradeoff between performance, fault
tolerance and usability, and few need to use - I'm going to deprecate
it so far.

Additionally, URL to download executor jar file is that of Retz
server, which changes after fail over - making ExecutorInfo
change. While Mesos ExecutorInfo that has same name should not change
during Framework lifetime. Otherwise newer task execution always fails.

--- a/retz-server/src/test/resources/public/test.html
+++ b/retz-server/src/test/resources/public/test.html
@@ -1,4 +1,5 @@
-====
+<!--
+
        Retz
        Copyright (C) 2016 Nautilus Technologies, Inc.
 
@@ -13,6 +14,15 @@
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.
-====
 
-42
+-->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+</head>
+<body>
+
+</body>
+</html>
