Add protocol version and server version to every requests and responses

--- a/retz-server/src/main/resources/public/index.html
+++ b/retz-server/src/main/resources/public/index.html
@@ -32,9 +32,11 @@
 
     <div id="date"></div>
     <div id="up"></div>
+    <div id="server"></div>
     <div id="version"></div>
+    <div id="protocol"></div>
     <br/>
-    <a href="#" onClick="updateProfile();">Reload System Status</a>
+    <a href="#" onClick="updateProfile(); updateStatus();">Reload System Status</a>
 
     <div id="profile"></div>
 
@@ -50,6 +52,7 @@
     <ul>
         <li><a href="https://retz.github.io/">Retz official site</a></li>
         <li><a href="https://github.com/retz/retz/issues">Report issue</a></li>
+        <li><a href="/status">/status</a></li>
     </ul>
     <hr/>
     Retz 2016.
